# prm_pkg

prm_ws/src/prm_pkg/: package.xml  setup.cfg  setup.py
prm_ws/src/prm_pkg/launch/: main_navigation_launch.py
prm_ws/src/prm_pkg/prm_pkg/: generate_prm.py  generate_prm_funciona_a_medias.py  prm_navigation.py  prm_navigation_aux.py  prm_navigation_falso.py
prm_ws/src/prm_pkg/rviz/: final_config.rviz
