<?xml version="1.0"?>
<package format="3">
  <name>prm_pkg</name>
  <version>0.0.1</version>
  <description>PRM Navigation with CoppeliaSim and RViz2</description>
  <maintainer email="osdoco@alumno.upv.es">osdoco</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

